turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:11: error: reassignment to val
			state=NextState(state, c, rule);
                             ^Turmite:12: error: reassignment to val
			c=colors.length
                         ^Turmite:14: error: reassignment to val
		c=c+1
                 ^